# hora

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  UPGRADES.md  config.example.toml  deny.toml
.github/workflows/: audit.yml  ci.yml  docker.yml  docs.yml  release.yml
crates/hora/: Cargo.toml
crates/hora-core/: Cargo.toml
crates/hora-core/migrations/: 0001_init.sql  0002_certs.sql  0003_covering_index.sql  0004_checks_constraints.sql  0005_cert_pins.sql  0006_incidents.sql  0007_downsampling.sql  0008_incident_notes.sql  0009_silences.sql  0010_incident_snapshots.sql  0011_domain_expiry.sql  0012_meta.sql  0013_announcements.sql
crates/hora-core/src/: cert.rs  coalesce.rs  config.rs  confirm.rs  db.rs  digest.rs  doctor.rs  exec.rs  http.rs  import.rs  lib.rs  notifications.rs  peer.rs  probe.rs  rdap.rs  report.rs  scheduler.rs  slo.rs  supervisor.rs  topology.rs  tune.rs
crates/hora-notify/: Cargo.toml
crates/hora-notify/src/: discord.rs  email.rs  freemobile.rs  gotify.rs  lib.rs  matrix.rs  ntfy.rs  pushover.rs  slack.rs  telegram.rs  util.rs  webhook.rs
crates/hora-web/: Cargo.toml
crates/hora-web/src/: error.rs  handlers.rs  heatmap.rs  history.rs  lib.rs  metrics.rs  render.rs  report.rs  routes.rs  summary.rs  text.rs
crates/hora-web/templates/: history.html  report.html  status.html
crates/hora/src/: main.rs  top.rs
docs/: astro.config.mjs  package.json
docs/src/content/docs/: configuration.md  getting-started.md  index.mdx  roadmap.md  upgrading.md
docs/src/content/docs/guides/: alerting.md  import.md  incidents.md  monitors.md  multi-tenant.md  peers.md  slo.md
docs/src/content/docs/reference/: api.md  cli.md
docs/src/styles/: custom.css
