[workspace]
resolver = "3"
members = [
    "crates/hora-notify",
    "crates/hora-core",
    "crates/hora-web",
    "crates/hora",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[workspace.dependencies]
anyhow = "1.0.102"
askama = "0.16.0"
async-trait = "0.1.89"
axum = "0.8.9"
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
notify = "8.2.0"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json", "charset", "http2"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", default-features = false, features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
tokio = { version = "1.52.3", default-features = false }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["aws-lc-rs", "tls12", "logging"] }
toml = "1.1.2"
tower-http = { version = "0.6.11", features = ["cors", "trace", "set-header"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
x509-parser = "0.18.1"

hora-core = { path = "crates/hora-core" }
hora-notify = { path = "crates/hora-notify" }
hora-web = { path = "crates/hora-web" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
