[package]
name = "hora-core"
description = "Core of Hora: configuration, probing, SQLite storage, TLS-expiry and scheduling."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
arc-swap = "1.9.1"
chrono.workspace = true
croner.workspace = true
futures-util = { version = "0.3.32", default-features = false, features = ["alloc"] }
hickory-resolver = { workspace = true }
hora-notify.workspace = true
notify.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_path = "0.7.2"
sha2.workspace = true
socket2 = "0.6.1"
sqlx.workspace = true
surge-ping = "0.8.4"
tokio = { workspace = true, features = ["rt", "time", "net", "sync", "signal", "process"] }
tokio-rustls.workspace = true
toml.workspace = true
tracing.workspace = true
utoipa = "5.5.0"
x509-parser.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "process"] }

[lints]
workspace = true
