[package]
name = "hora-notify"
description = "Notification abstraction for Hora: a Notifier trait and built-in channels."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
# rustls via aws-lc-rs (matching the rest of the workspace) - NOT `tokio1-rustls-tls`,
# which would force the `ring` provider (extra crypto lib + non-allowed license).
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-rustls", "aws-lc-rs", "webpki-roots"] }
reqwest.workspace = true
serde.workspace = true
tracing.workspace = true

[lints]
workspace = true
