[package]
name = "hora-web"
description = "Web layer for Hora: the server-rendered status page and JSON API."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
arc-swap = "1.9.1"
askama.workspace = true
axum.workspace = true
chrono.workspace = true
futures-util = { version = "0.3.32", default-features = false, features = ["alloc"] }
hora-core.workspace = true
serde.workspace = true
sqlx.workspace = true
tokio = { workspace = true, features = ["sync"] }
tower-http.workspace = true
tower_governor = { version = "0.8.0", default-features = false, features = ["axum"] }
tracing.workspace = true
utoipa = "5.5.0"

[lints]
workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
tower = { version = "0.5.3", features = ["util"] }
