[package]
name = "hora"
description = "Hora - a tiny self-hosted uptime monitor with a status page, JSON API and alerts."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
crossterm = { version = "0.29", features = ["event-stream"] }
futures-util = { version = "0.3.32", default-features = false, features = ["alloc"] }
hora-core.workspace = true
hora-web.workspace = true
ratatui = "=0.30.0"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "net", "sync"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
